[gd_scene load_steps=6 format=3 uid="uid://coc06jjeg1guu"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_b5g3u"]
[ext_resource type="PackedScene" uid="uid://cpvakj0xxidw5" path="res://scenes/player.tscn" id="1_idqi2"]
[ext_resource type="PackedScene" uid="uid://co4brksgir0n" path="res://map/Ambient.tscn" id="2_0qt4i"]
[ext_resource type="PackedScene" uid="uid://c8ys4py2pmoop" path="res://scenes/ui.tscn" id="4_i1hbt"]
[ext_resource type="PackedScene" uid="uid://be2rsdj44tvw5" path="res://music/music.tscn" id="6_kcqm5"]

[node name="Level" type="Node2D"]
script = ExtResource("1_b5g3u")

[node name="Map" parent="." instance=ExtResource("2_0qt4i")]

[node name="Player" parent="." instance=ExtResource("1_idqi2")]
metadata/_edit_lock_ = true

[node name="Projectiles" type="Node2D" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]
position = Vector2(3, 0)

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-1455, -155)

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-359, -73)

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(76, -306)

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-1482, -895)

[node name="Marker2D5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1034, -857)

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-1314, 262)

[node name="Marker2D7" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1125, -80)

[node name="Marker2D8" type="Marker2D" parent="SpawnPoints"]
position = Vector2(758, 237)

[node name="Marker2D9" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-200, -885)

[node name="Marker2D10" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-1152, 711)

[node name="Marker2D11" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-511, 754)

[node name="Marker2D12" type="Marker2D" parent="SpawnPoints"]
position = Vector2(419, 804)

[node name="Marker2D13" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-853, -431)

[node name="Enemies" type="Node2D" parent="."]

[node name="BatTimer" type="Timer" parent="Enemies"]
autostart = true

[node name="GhostTimer" type="Timer" parent="Enemies"]
wait_time = 5.0

[node name="UI" parent="." instance=ExtResource("4_i1hbt")]

[node name="Music" parent="." instance=ExtResource("6_kcqm5")]

[connection signal="health_change" from="Player" to="UI" method="_on_player_health_change"]
[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="timeout" from="Enemies/BatTimer" to="." method="_on_bat_timer_timeout"]
[connection signal="timeout" from="Enemies/GhostTimer" to="." method="_on_ghost_timer_timeout"]
[connection signal="lvl_up" from="UI" to="." method="_on_ui_lvl_up"]
